--- a/BethanysPieShop.csproj
+++ b/BethanysPieShop.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Components\ShoppingCartSummary\" />
     <Folder Include="wwwroot\Lib\" />
   </ItemGroup>
 
